Fix small always present horizontal scrolling
Not an actual fix, in my opinion, but I don't see a better solution for
it just yet.

--- a/project-static/css/base.css
+++ b/project-static/css/base.css
@@ -3,6 +3,10 @@ html {
   min-height: 100%;
   font-size: 14px;
 }
+/* Need to revisit why we need this */
+body {
+  overflow-x: hidden;
+}
 a:not([class*="btn"]) {
   text-decoration: none;
 }
